Quiz Application Updated

--- a/src/config/config.env
+++ b/src/config/config.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGODB_URL=mongodb://127.0.0.1:27017/myDatabase-mongoose
+MONGODB_URL=mongodb:mongodb://db-quiz:@dbquiz786@ds231307.mlab.com:31307/heroku_g6zmnjw6
 JWT_SECRET=EvolUTionaaaaafdgd
